Fix for dropdowns. The hover dropdown is hidden by default.

--- a/less/gn_navbar_dutch.less
+++ b/less/gn_navbar_dutch.less
@@ -25,7 +25,6 @@ div.navbar {
   min-height: 56px;
   padding-top: 8px;
   border: 0px;
-  position: relative;
   border-radius: 0;
 }
 // ----- tablets
@@ -170,30 +169,8 @@ div.navbar {
 .navbar-text {
   margin-top: 11px;
 }
-
-// handle hover dropdowns for editor and admin menu (only if not on mobile)
-@media (min-width: @screen-sm-min) {
-  li.dropdown-hover {
-    & > .dropdown-toggle {
-      position: relative;
-      &:after {
-        font-family: FontAwesome;
-        content: "\f0d7";
-        position: absolute;
-        bottom: -5px;
-        left: 50%;
-        transform: translate(-50%, 0);
-        font-size: 0.9em;
-      }
-    }
-    &.open:not(.active) > .dropdown-toggle {
-      background: none;
-    }
-    ul {
-      display: none;
-    }
-    &:hover ul, & > a:focus + ul, & > a:active + ul {
-      display: block;
-    }
+[ng-app="gn_editor"] {
+  .navbar-default .navbar-text {
+    color: #777;
   }
 }
